<resources>
    <string name="app_name">PawAdoptJava</string>
    <string name="title_home">Favorites</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>
    <string name="dog" />
    <string name="cat" />
    <string name="bird" />
    <string name="fish" />
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="Fish">Fish</string>
    <string name="birds">Birds</string>
</resources>