<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9E7E8"
    android:gravity="center_horizontal"
    tools:context=".DashboardFragment">
    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=",ylk"
        android:layout_marginTop="20dp"

        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=",nslk"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/firstNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:background="@drawable/search_view_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityTextView"
        app:queryHint="Search e.g dog,male,London"
        app:layout_constraintWidth_percent="0.65"
        android:textColorHint="@color/black"
        app:iconifiedByDefault="false"
         />
    <LinearLayout
        android:id="@+id/animalButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        >
        <ImageButton
            android:id="@+id/dogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/dog_icon"
            android:scaleType="centerInside"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:contentDescription="@string/dog"
            android:onClick="filterAnimals" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dogs"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginTop="-16dp"

             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        >
        <ImageButton
            android:id="@+id/catButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/cat_icon"
            android:scaleType="centerInside"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:contentDescription="@string/cat"
            android:onClick="filterAnimals" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cats"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginTop="-16dp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        >

        <ImageButton
            android:id="@+id/birdButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/bird_icon"
            android:scaleType="centerInside"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:contentDescription="@string/bird"
            android:onClick="filterAnimals" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birds"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginTop="-16dp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        >

        <ImageButton
            android:id="@+id/fishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/fish_icon"
            android:scaleType="centerInside"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:contentDescription="@string/fish"
            android:onClick="filterAnimals" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fish"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginTop="-16dp"

        />
</LinearLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalButtonsContainer"

         />


</androidx.constraintlayout.widget.ConstraintLayout>